Dependency injection, add organization

--- a/DocumentConverter.Contracts/DocumentConverter.Contracts.csproj
+++ b/DocumentConverter.Contracts/DocumentConverter.Contracts.csproj
@@ -16,6 +16,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DocumentConverter.EF.Core\DocumentConverter.EF.Core.csproj" />
   </ItemGroup>
 
 </Project>
