--- a/DocumentConverter.Cli/DocumentConverter.Cli.csproj
+++ b/DocumentConverter.Cli/DocumentConverter.Cli.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -17,9 +17,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DocumentConverter.BusinessLogic\DocumentConverter.BusinessLogic.csproj" />
+    <ProjectReference Include="..\DocumentConverter.Contracts\DocumentConverter.Contracts.csproj" />
     <ProjectReference Include="..\DocumentConverter.EF.Core\DocumentConverter.EF.Core.csproj" />
   </ItemGroup>
 
