--- a/DocumentConverter.BusinessLogic/DocumentConverter.BusinessLogic.csproj
+++ b/DocumentConverter.BusinessLogic/DocumentConverter.BusinessLogic.csproj
@@ -16,12 +16,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DocumentConverter.Contracts\DocumentConverter.Contracts.csproj" />
     <ProjectReference Include="..\DocumentConverter.EF.Core\DocumentConverter.EF.Core.csproj" />
+    <ProjectReference Include="..\DocumentConverter.Models\DocumentConverter.Models.csproj" />
   </ItemGroup>
 
 </Project>
