--- a/DocumentConverter.Cli/DocumentConverter.Cli.csproj
+++ b/DocumentConverter.Cli/DocumentConverter.Cli.csproj
@@ -17,6 +17,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
@@ -26,6 +28,12 @@
     <ProjectReference Include="..\DocumentConverter.BusinessLogic\DocumentConverter.BusinessLogic.csproj" />
     <ProjectReference Include="..\DocumentConverter.Contracts\DocumentConverter.Contracts.csproj" />
     <ProjectReference Include="..\DocumentConverter.EF.Core\DocumentConverter.EF.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appSettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
