Xml reading is working properly, put methods to correct classes

--- a/DocumentConverter.Contracts/DocumentConverter.Contracts.csproj
+++ b/DocumentConverter.Contracts/DocumentConverter.Contracts.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DocumentConverter.EF.Core\DocumentConverter.EF.Core.csproj" />
+    <ProjectReference Include="..\DocumentConverter.Models\DocumentConverter.Models.csproj" />
   </ItemGroup>
 
 </Project>
