trying to do operationscli tests, not working as i have hoped

--- a/DocumentConverter.Tests/DocumentConverter.Tests.csproj
+++ b/DocumentConverter.Tests/DocumentConverter.Tests.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DocumentConverter.BusinessLogic\DocumentConverter.BusinessLogic.csproj" />
+    <ProjectReference Include="..\DocumentConverter.Cli\DocumentConverter.Cli.csproj" />
     <ProjectReference Include="..\DocumentConverter.Contracts\DocumentConverter.Contracts.csproj" />
   </ItemGroup>
 
